--- a/index.html
+++ b/index.html
@@ -6,31 +6,65 @@
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
   <title>Address Book</title>
+  <title></title>
 </head>
 <body>
-  <h1>Address Book</h1>
-  <h2>Add a Contact:</h2>
-  <form id="new-contact">
-    <label for="new-first-name">First Name</label>
-    <input type="text" id="new-first-name">
-    <label for="new-last-name">Last Name</label>
-    <input type="text" id="'new-last-name">
-    <label for="new-phone-number">Phone Number</label>
-    <input type="text" id="new-phone-number">
-    <button type="submit">Add</button>
-  </form>
-
-  <h2>Contacts:</h2>
-  <ul id="contacts">
-  </ul>
-
-  <div id="show-contact">
-    <p>First Name:<span class ="first-name"></span></p>
-    <p>Last Name:<span class="last-name"></span></p>
-    <p>Phone Number:<span class="phone-number"></span></p>
-    <div id="buttons">
+  <div class="container">
+    <h1>Address Book</h1>
+    <div class="row">
+      <div class="col-md-6">
+        <hr>
+        <h2>Add a Contact:</h2>
+        <form id="new-contact">
+          <div class="form-group">
+            <label for="new-first-name">First Name</label>
+            <input type="text"  class="form-control" id="new-first-name">
+          </div>
+          <div class="form-group">
+            <label for="new-last-name">Last Name</label>
+            <input type="text"  class="form-control" id="new-last-name">
+          </div>
+          <div class="form-group">
+            <label for="new-phone-number">Phone Number</label>
+            <input type="text"  class="form-control" id="new-phone-number">
+          </div>
+          <div class="form-group">
+            <label for="email-address">Email Address</label>
+            <input type="text"  class="form-control" id="email-address">
+          </div>
+          <div class="form-group">
+            <label for="work-email">Work Email Address</label>
+            <input type="text"  class="form-control" id="work-email">
+          </div>
+          <div class="form-group">
+            <label for="physical-address">Physical Address</label>
+            <input type="text"  class="form-control" id="physical-address">
+          </div>
+          <div class="form-group">
+            <label for="work-address">Work Physical Address</label>
+            <input type="text"  class="form-control" id="work-address">
+          </div>
+          <button type="submit" class="btn-primary">Add</button>
+        </form>
+        <hr>
+        <h2>Contacts:</h2>
+        <ul id="contacts">
+        </ul>
+      </div>
+      <div class="col-md-6">
+        <div id="show-contact">
+          <p>First Name: <span class="first-name"></span></p>
+          <p>Last Name: <span class="last-name"></span></p>
+          <p>Phone Number: <span class="phone-number"></span></p>
+          <p>Email Address: <span class="email-address"></span></p>
+          <p>Work Email Address: <span class="work-email"></span></p>
+          <p>Physical Address: <span class="physical-address"></span></p>
+          <p>Work Physical Address: <span class="work-address"></span></p>
+          <div id="buttons">
+          </div>
+        </div>
+      </div>
     </div>
-
   </div>
 </body>
 </html>
