WIP removing an emtpy text from

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <p>Last Name: <span class="last-name"></span></p>
           <p>Phone Number: <span class="phone-number"></span></p>
           <p>Email Address: <span class="email-address"></span></p>
-          <p>Work Email Address: <span class="work-email"></span></p>
+          <p id="workEmail">Work Email Address: <span class="work-email"></span></p>
           <p>Physical Address: <span class="physical-address"></span></p>
           <p>Work Physical Address: <span class="work-address"></span></p>
           <div id="buttons">
